# dv-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile.toml  README.md  TODO.md  ]  api.sh  docker-compose.yml  run.sh
.cargo/: config.toml
.github/workflows/: cd.yml  ci.yml  main.yml
ap/: Dockerfile  LICENSE  build.sh
ap-com/: Cargo.toml  README.md
ap-com/ap-cloud/: Cargo.toml  README.md
ap-com/ap-cloud/src/: main.rs
ap-com/ap-cloud/src/dynamodb/: mod.rs
ap-com/ap-cloud/src/models/: mod.rs
ap-com/ap-cloud/src/s3/: mod.rs
ap-com/ap-data/: Cargo.toml
ap-com/ap-data/src/: prelude.rs
ap-com/ap-data/src/actor/: mod.rs
ap-com/ap-data/src/types/: mod.rs
ap-com/ap-http/: Cargo.toml
ap-com/ap-http/src/: error.rs  prelude.rs
ap-com/src/: error.rs  lib.rs  prelude.rs
ap-com/src/auth/: jwt.rs  mod.rs
ap-com/src/db/: mod.rs  pg.rs
ap-com/src/db/migrate/: mod.rs
ap-com/src/models/: mod.rs  routes.rs
ap-com/src/models/action/: mod.rs
ap-com/src/models/book/: group.rs  link.rs  mod.rs  post.rs  topic.rs
ap-com/src/models/book/page/: mod.rs
ap-com/src/models/category/: mod.rs
ap-com/src/models/channel/: mod.rs
ap-com/src/models/condition/: mod.rs  op.rs
ap-com/src/models/field/: mod.rs  target.rs  value.rs
ap-com/src/models/group/: mod.rs
ap-com/src/models/item/: mod.rs
ap-com/src/models/learn/: mod.rs
ap-com/src/models/learn/bot/: mod.rs
ap-com/src/models/learn/explore/: mod.rs
ap-com/src/models/learn/knowledge/: msg.rs  node.rs
ap-com/src/models/learn/scrape/: mod.rs
ap-com/src/models/link/: mod.rs
ap-com/src/models/messages/: group.rs  mod.rs  topic.rs  user.rs
ap-com/src/models/post/: mod.rs
ap-com/src/models/record/: mod.rs
ap-com/src/models/task/: mod.rs  status.rs
ap-com/src/models/task/book/: mod.rs  step.rs
ap-com/src/models/task/containers/: graph.rs  mod.rs
ap-com/src/models/task/context/: mod.rs
ap-com/src/models/task/exec/: mod.rs
ap-com/src/models/topic/: mod.rs
ap-com/src/models/user/: account.rs  badge.rs  credentials.rs  graph.rs  level.rs  link.rs  mod.rs  profile.rs  session.rs  verification.rs
ap-com/src/models/user/feel/: mod.rs
ap-com/src/proc/: mod.rs
ap-com/src/query/: mod.rs
ap-com/src/rel/: has.rs  link.rs  mod.rs  relation.rs
ap-com/src/types/: auth.rs  id.rs  mod.rs  time.rs  token.rs
ap-com/src/util/: respond.rs
ap-exe/: Cargo.toml
ap-exe/src/: prelude.rs
ap-exe/src/queue/: mod.rs  msg.rs  worker.rs
ap-lang/: Cargo.toml  README.md
ap-lang/src/: prelude.rs
ap-lang/src/ast/: mod.rs
ap-lang/src/grammar/: grammar.pest  mod.rs
ap-lang/src/token/: mod.rs
ap-red/: Cargo.toml  README.md
ap-red/src/: lib.rs
ap-red/src/ops/: mod.rs
ap-rpc/: Cargo.toml
ap-rt/: Cargo.toml  README.md
ap-rt/proto/routeguide/: routeguide.proto
ap/lib/ap-auth/: Cargo.toml
ap/lib/ap-search/: Cargo.toml
ap/scripts/: Dockerfile
ap/src/: api.rs  context.rs  error.rs  lib.rs  prelude.rs
api/: README.md  docker-compose.yml
api-common/: Cargo.toml
api-common/api-cloud/: Cargo.toml
api-common/api-cloud/src/: lib.rs  main.rs
api-common/api-cloud/src/lambda/: mod.rs
api-common/api-data/: Cargo.toml  README.md
api-common/api-data/src/: lib.rs
api-common/api-http/: Cargo.toml  README.md
api-common/api-http/src/: lib.rs
api-common/api-http/src/response/: mod.rs
api-common/api-http/src/types/: mod.rs
api-common/src/: error.rs  lib.rs
api-common/src/auth/: jwt.rs  oauth.rs
api-common/src/models/: account.rs  automata.rs  credentials.rs  mod.rs  profile.rs  session.rs  verification.rs
api-common/src/models/action/: mod.rs
api-common/src/models/ai/bot/: mod.rs
api-common/src/models/auth/: mod.rs
api-common/src/models/book/: group.rs  mod.rs  post.rs  record.rs  topic.rs  user.rs
api-common/src/models/book/page/: mod.rs
api-common/src/models/channel/: mod.rs
api-common/src/models/culture/: mod.rs
api-common/src/models/feel/: mod.rs
api-common/src/models/field/: mod.rs  target.rs  value.rs
api-common/src/models/group/: mod.rs
api-common/src/models/item/: mod.rs
api-common/src/models/learn/: mod.rs
api-common/src/models/learn/eval/: mod.rs
api-common/src/models/learn/hooks/: mod.rs
api-common/src/models/learn/knowledge/: edge.rs  mod.rs
api-common/src/models/learn/organize/: mod.rs
api-common/src/models/learn/scrape/: mod.rs
api-common/src/models/link/: mod.rs
api-common/src/models/messages/: group.rs  mod.rs  topic.rs  user.rs
api-common/src/models/post/: mod.rs
api-common/src/models/record/: mod.rs
api-common/src/models/task/: condition.rs  mod.rs
api-common/src/models/task/book/: mod.rs  step.rs
api-common/src/models/task/containers/: chain.rs  tree.rs
api-common/src/models/task/context/: mod.rs
api-common/src/models/task/exec/: mod.rs
api-common/src/models/topic/: mod.rs
api-common/src/models/user/: account.rs  badge.rs  credentials.rs  graph.rs  level.rs  link.rs  mail.rs  mod.rs  profile.rs  session.rs  verification.rs
api-common/src/models/user/feel/: mod.rs
api-common/src/proc/actions/email/: mod.rs  notifier.rs  repeater.rs
api-common/src/query/: datetime.rs  mod.rs
api-common/src/types/: auth.rs  id.rs  mod.rs  time.rs  token.rs
api-db/: Cargo.toml  Dockerfile
api-db/sql/public/: down.sql  up.sql
api-db/src/: error.rs  lib.rs  listen.rs
api-db/src/db/: mod.rs  pg.rs  sqlite.rs
api-db/src/migrate/: mod.rs
api-db/src/query/: mod.rs
api-db/src/types/: id.rs  mod.rs
api-exec/: Cargo.toml  README.md
api-exec/src/: error.rs  lib.rs
api-lang/: Cargo.toml
api-lang/src/: lib.rs
api-proto/: Cargo.toml  README.md  b.rs
api-redis/: Cargo.toml  Dockerfile
api-redis/src/: client.rs  error.rs  prelude.rs
api-rt/: Cargo.toml  build.rs
api/api-channels/: Cargo.toml
api/api-rpc/: Cargo.toml
api/src/: api.rs  context.rs  error.rs  lib.rs
lib/: main.zig
lib/api-ml/: pyproject.toml
lib/api-ml/tests/: test_api_ml.py
lib/api-py/: pyproject.toml
lib/lib-go/: Dockerfile
lib/pyrt/: pyproject.toml
static/pages/: rt.html
(+115 files in other folders)
