[package]
name = "di-api"
description = "The core backend API of Devisa, LLC"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "di-api"

[lib]
name = "di_api"
path = "ap/src/lib.rs"

[[bin]]
name = "di-api"
path = "ap/src/bin/di-api.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.actix-web]
version = ">=4.0.0-beta.8"
features = ["cookies",  "rustls", "secure-cookies" ]

[dependencies]
ap-com = { path = "./ap-com/" }
ap-lang = { path = "./ap-lang/" }
ap-rt = { path = "./ap-rt/" }
ap-red = { path = "./ap-red/" }
ap-rpc = { path = "./ap-rpc/", optional = true }
actix = "*"
serde = "1.0.125"
async-trait = "*"
serde_json = { version = "1.0.64", features = ["preserve_order"] }
actix-http = { version = "=3.0.0-beta.8" }
chrono = { version = "0.4.19", features = ["serde"]}
anyhow = "1.0.40"
dotenv = "0.15.0"
uuid = { version = "*", features = ["v4", "serde"] }
actix-multipart = ">=0.4.0-beta.4"
futures = "0.3.14"
pwhash = "1.0.0"
jsonwebtoken = "7.2.0"
actix-rt = "*"
lazy_static = "1.4.0"
futures-util = "0.3.14"
derive_more = "0.99.13"
time = "0.2.26"
redis = { version="0.20.0", features=["aio", "tokio-comp"]}
tokio = "1.8.4"
async-graphql = { version ="2.9.3", features=["chrono", "url", "uuid"] }
async-graphql-actix-web = "2.9.3"
actix-protobuf = { version = "0.6.0", optional = true }
protobuf ={ version = "2.24.1", optional = true }
rustls = { version = "0.19.1", optional = false }
tracing-futures = "0.2.5"
once_cell = "1.8.0"
tinyvec = { version = "1.2.0", features = ["alloc"] }
log = "0.4.14"
actix-web-prom = "0.5.1"
sentry = "0.22.0"
sentry-actix = "0.22.0"
tracing = "0.1.26"
actix-session = { version = ">=0.5.0-beta.2" }
actix-redis = { version = ">=0.10.0-beta.2", features = ["web"] }
# actix-cors = "=0.6.0-beta.2"
# actix-service = { version = "2.0.0" }
# actix-web-actors = { git = "" }
# actix-broker = "*"
# url = { version = "2.2.2", features = ["serde"] }
# env_logger = "0.8.4"
# tracing-appender = "0.1.2"
# tracing-log = "0.1.2"
# tracing-opentelemetry = { version = "0.13.0", default-features = false }
# ring = "0.16.20"
# tracing-actix-web = "0.4.0-beta.7"
# actix-identity = { version = "=0.4.0-beta.2" }
# actix-web-httpauth = "=0.6.0-beta.2"


# tracing-actix = "0.3.0"
# acme-client = { version = "0.5", default-features = false }
# actix-web-opentelemetry = "0.10.0"
# bytes = "1.0.1"
# dashmap = "4.0.2"
# pin-project-lite = "0.2.6"
# actix-web-static-files = "3.0.5"
# actix-web-grants = "2.0.1"
# awc = "2.0.3"
# actix-http = "2.2.0"
# juniper = "0.15.4"
# actix-service = { version = "^2.0.0-beta.5" }
# actix-files = "0.6.0-beta.4"
# toml = "0.5.8"
# regex = "1.4.6"
# sentry-actix = "0.22.0"
# once_cell = "1.7.2"
# tinyvec = "1.2.0"
# sentry = "0.22.0"
# actix-cors = "0.6.0-beta.1
# cookie = "0.15"
# actix-web-actors = ">=4.0.0-beta.4"
# actix-identity = "0.4.0-beta.1"
# actix-service = { version = "^2.0.0-beta.5" }
# juniper = { git = "https://github.com/graphql-rust/juniper" }
# juniper_actix = "*"

# [dependencies.libreauth]
# version = "*"
# default-features = false
# features = ["key", "oath", "pass"]


[dependencies.sqlx]
version = "0.5.5"
default-features = false
optional = false
features = [
  "postgres", "runtime-actix-rustls",
  "macros", "chrono",
  "json", "migrate", "uuid", "bit-vec", "ipnetwork"
]

[dependencies.tracing-subscriber]
version = "0.2.18"
default-features = false
optional = false
features = ["env-filter", "registry", "fmt", "smallvec", "tracing-log", "json", "parking_lot"]

# [dependencies.opentelemetry]
# version = "0.14.0"
# efault-features = false
# optional = false
# features = ["trace", "rt-tokio"]

[features]
default = [ "grpc" ]
grpc = ["ap-rpc", "protobuf", "actix-protobuf"]

[dev-dependencies]
# criterion = "0.3.4"
# fake = "*"
# tokio = { version = "1.5.0", features = ["macros"] }
# actix-rt = "2.2.0"
# wiremock = "0.5.3"
# actix-http = "2.2.0"
# reqwest = { version = "0.11.3", features = ["blocking","json"] }
# actix-http-test = "2.1.0"
# lazy_static = "1.4.0"
# actix-server = "1.0.4"
# actix-test-server = "0.2.2"

[workspace]

members = [
  "./ap/lib/ap-gql",
  "./ap/lib/ap-rpc",
  "./ap/lib/ap-auth",
  "./ap/lib/ap-search",
  "./ap/lib/ap-channel",
  "./ap-exe",
  "./ap-rt",
  "./ap-com",
  "./ap-rpc",
  "./ap-red",
  "./ap-lang",
]

default-members = [
  "./ap/lib/ap-gql",
  "./ap/lib/ap-rpc",
  "./ap/lib/ap-auth",
  "./ap/lib/ap-search",
  "./ap/lib/ap-channel",
  "./ap-exe",
  "./ap-rt",
  "./ap-com",
  "./ap-rpc",
  "./ap-red",
  "./ap-lang",
]

# [package]
# name = "dv_api"

# [[bin]]
# name = "api"
# path = "api/src/bin/server.rs"

[profile.dev]
opt-level = 0
debug-assertions = true
overflow-checks = false
incremental = true
debug = true
panic = 'unwind'
lto = false
codegen-units = 256
# rpath = false

[profile.release]
opt-level = 3
debug = false
panic = 'unwind'
overflow-checks = false
debug-assertions = false
lto = false
incremental = false
codegen-units = 16
rpath = false

[profile.test]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
incremental = true
rpath = false
codegen-units = 256
panic = 'unwind'
lto = false

[profile.bench]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]
