[package]
name = "ap-com"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

[lib]
name = "ap_com"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ap-cloud = { path = "./ap-cloud" }
ap-data = { path = "./ap-data" }
ap-http = { path = "./ap-http" }

actix = "*"
actix-web = { version = "=4.0.0-beta.8", features = ["rustls"] }
async-graphql = { version ="2.9.3", features=["chrono", "url", "uuid"] }
# actix-service = { version = "2.0.0" }
actix-http = { version = "=3.0.0-beta.8" }
serde = { version = "1.0.126", features = ["derive"] }
async-trait = "*"
serde_json = "1.0.64"
pwhash = "1.0.0"
futures = "0.3.14"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.14"
anyhow = "1.0.41"
dynomite = "0.10.0"
rand = "0.8.3"
lettre = "0.10.0-beta.4"
tracing = "*"
tracing-futures = "0.2.5"
jsonwebtoken = "7.2.0"
derive_more = "0.99.14"
libsqlite3-sys = { version = "0.22.2", optional=true }
# fake = { version = "2.4", features=['derive', 'chrono', 'http']}
# ring = "0.16.20"
# tracing-log = "0.1.2"
# tracing-appender = "0.1.2"
# actix-broker = "0.4.1"
# tracing-opentelemetry = { version = "0.13.0", default-features = false }
# opentelemetry = { version = "0.14.0", default-features = false, features = ["trace", "rt-tokio"] }
# petgraph = "0.5.1"
# url = { version = "2.2.2", features = ["serde"] }
# juniper = { git = "https://github.com/graphql-rust/juniper" }
# juniper_actix = "*"


[dev-dependencies]
tokio = { version = "*", features = ["full"] }
actix-rt = "2.2.0"




[dependencies.sqlx]
version = "0.5.5"
default-features = false
optional = true
features = [
  "postgres", "runtime-actix-rustls", "macros", "chrono",
  "json", "migrate", "uuid"
]

[dependencies.tracing-subscriber]
version = "0.2.18"
default-features = false
optional = false
features = ["env-filter", "registry", "fmt", "smallvec", "tracing-log", "json", "parking_lot"]

[features]
default = ["pg", "rust_tls"]
pg = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite", "libsqlite3-sys"]
rust_tls = ["sqlx/runtime-actix-rustls"]
nativetls = ["sqlx/runtime-actix-native-tls"]

