[package]
name = "ap-lang"
version = "0.1.0"
authors = ["clp"]
edition = "2018"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[lib]
name = "api_lang"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = "5.2.2"
num-format = "0.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"
strsim = "0.10.0"
