[package]
name = "ap-rpc"
version = "0.1.0"
authors = ["clp <clp@clp.is>"]
edition = "2018"
default-run = "di-proto-server"

[[bin]]
name = "di-proto-server"
path = "src/bin/server.rs"

[[bin]]
name = "di-proto-client"
path = "src/bin/client.rs"

[lib]
name = "api_rpc"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.1"
futures-core = "0.3.15"
futures-util = "0.3.15"
rand = "0.8.3"
serde = "1.0.125"
serde_json = "1.0.64"
tokio = "1.16.1"
tokio-stream = "0.1.5"
tonic = { version = "0.4.3", features = ["transport", "tls", "codegen", "prost"] }
prost = "0.7.0"
prost-derive = "0.7.0"

[build-dependencies]
tonic-build = "0.4"
# prost-build = "0.4"
