[package]
name = "ap-rt"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "server"

[lib]
name = "ap_rt"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio ={ version = "1.6.0", features = ["full"] }
warp = "0.3.3"
pretty_env_logger = "0.4.0"
futures = "0.3.15"
crossbeam-channel = "*"
crossbeam-deque = "*"
crossbeam-epoch = "*"
crossbeam-utils = "*"
tokio-stream = "0.1.5"
async-stream = "0.3.1"
futures-core = "0.3.15"
futures-util = "0.3.15"
prost = "0.7.0"
rand = "0.8.3"
serde = "1.0.125"
serde_json = "1.0.64"
tonic = "0.4.3"
hyper = "0.14.7"
http = "0.2.4"

[build-dependencies]
tonic-build = "0.4"
