[package]
name = "api-common"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

[lib]
name = "api_common"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api-cloud = { path = "./api-cloud" }
api-data = { path = "./api-data" }
api-http = { path = "./api-http" }
api-db = { path = "../api-db" }

actix = "*"
actix-web = { version = "=4.0.0-beta.7", features = ["rustls"] }
async-graphql = { version ="2.9.3", features=["chrono", "url", "uuid"] }
actix-service = { version = "2.0.0" }
actix-http = { version = "=3.0.0-beta.7" }
serde = { version = "1.0.126", features = ["derive"] }
async-trait = "*"
serde_json = "1.0.64"
pwhash = "1.0.0"
futures = "0.3.14"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
log = "0.4.14"
anyhow = "1.0.41"
ring = "0.16.20"
dynomite = "0.10.0"
fake = { version = "2.4", features=['derive', 'chrono', 'http']}
rand = "0.8.3"
lettre = "0.10.0-beta.4"
petgraph = "0.5.1"
url = { version = "2.2.2", features = ["serde"] }

tracing = "*"
tracing-appender = "0.1.2"
tracing-futures = "0.2.5"
tracing-log = "0.1.2"
tracing-opentelemetry = { version = "0.13.0", default-features = false }
opentelemetry = { version = "0.14.0", default-features = false, features = ["trace", "rt-tokio"] }
jsonwebtoken = "7.2.0"
actix-broker = "0.4.1"
# juniper = { git = "https://github.com/graphql-rust/juniper" }
# juniper_actix = "*"




[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
  "postgres", "runtime-actix-rustls", "macros", "chrono",
  "json", "migrate", "uuid"
]

[dependencies.tracing-subscriber]
version = "0.2.18"
default-features = false
optional = false
features = ["env-filter", "registry", "fmt", "smallvec", "tracing-log", "json", "parking_lot"]
