[package]
name = "api-db"
version = "0.1.0"
edition = "2018"
default-run = "api-db"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "api_db"
path = "src/lib.rs"

[[bin]]
name = "api-db"
path = "src/bin/api-db.rs"

[dependencies]
tracing = "0.1.26"
async-trait = "0.1.50"
anyhow = "1.0.41"
libsqlite3-sys = { version = "0.22.2", optional=true }
rustls = { version = "*", optional=true }
openssl = { version = "*", optional=true }
tracing-futures = "0.2.5"
tracing-subscriber = "0.2.18"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.126", features = ["derive"] }
derive_more = "0.99.14"


[dependencies.sqlx]
version = "0.5.1"
default-features = false
optional=true
features = [
  "runtime-actix-rustls", "macros", "chrono",
  "json", "migrate", "uuid"
]

[features]
default = ["postgres", "rustls_tls"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite", "libsqlite3-sys"]
rustls_tls = ["sqlx/runtime-actix-rustls", "rustls"]
openssl_tls = ["sqlx/runtime-actix-native-tls", "openssl"]

