[package]
name = "ap-cloud"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"

[lib]
name = "ap_cloud"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
dynomite = "0.10.0"
rusoto_core = "0.46.0"
rusoto_dynamodb = "0.46.0"
rusoto_s3 = "0.46.0"
serde = "1.0.125"
tokio = {version="1.5.0", features=["macros"]}
# rusoto_sqs = "0.46.0"
