[package]
name = "api-http"
version = "0.1.0"
authors = ["Chris P <chrisp1877@gmail.com>"]
edition = "2018"
default-run = "di-server"

[lib]
name = "api_http"
path = "src/lib.rs"

[[bin]]
name = "di-client"
path = "src/bin/client.rs"

[[bin]]
name = "di-server"
path = "src/bin/server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
