[tool.poetry]
name = "api-ml"
version = "0.1.0"
description = ""
authors = ["clp <clp@clp.is>"]

[tool.poetry.dependencies]
python = "^3.9"
pycrypto = "^2.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
